# restaurant_ev_charging

./: .env.example  .gitignore  Makefile  README.md  chatgpt_instructions.txt  chatgpt_instructions_short.txt  chatgpt_reference.md  gemini_agent.py  gemini_instructions.md  instructions.txt  openapi.json  plan-trip.sh  pyproject.toml  setup_example.env
app/: config.py  errors.py  main.py  schemas.py
app/clients/: geoapify.py  google_places.py  http.py  openchargemap.py  yelp.py
app/services/: filtering.py  reviews.py  search.py
app/utils/: distance.py  urls.py
tests/: conftest.py  test_canmore_integration.py  test_charger_reviews.py  test_distance.py  test_endpoint.py  test_filtering.py  test_google_places.py  test_google_places_integration.py  test_hope_integration.py  test_lloydminster_integration.py  test_reviews.py  test_tiering.py  test_urls.py  test_watrous_integration.py
