[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "restaurant-ev-charging"
version = "0.1.0"
description = "REST service to find restaurants near compatible DC fast chargers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.116.1,<1.0.0",
  "httpx>=0.28.1,<1.0.0",
  "pydantic>=2.11.7,<3.0.0",
  "slowapi>=0.1.9,<1.0.0",
  "uvicorn>=0.35.0,<1.0.0"
]

[project.optional-dependencies]
ai = [
  "google-genai>=1.0,<2.0",
]
dev = [
  "pytest>=8.4.1,<9.0.0",
  "pytest-asyncio>=1.1.0,<2.0.0",
  "respx>=0.22.0,<1.0.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
